<resources>
    <string name="app_name">IntermediateFirst</string>
    <string name="grant_multiple_permissions">Grant Multiple Permissions</string>
    <string name="permission_dialog_message">Please allow permissions in order to use full functionality of application.</string>
    <string name="get_notification">Get Notification</string>
    <string name="see_video">See Video</string>
    <string name="default_notification">Default Notification</string>
    <string name="custom_notification">Custom Notification</string>
    <string name="notification_title">System Notification</string>
    <string name="notification_content">This notification is good. You can do amazing stuff directly from here. You can actually do many things and in a while I\'m gonna tell you all those.</string>
    <string name="channel_name">System</string>
    <string name="channel_description">Require To Notify System Components</string>
    <string name="start_handler">Start</string>
    <string name="downloaded_image_from_service">Downloaded Image from Service</string>
    <string name="custom_drawable">Custom Drawable</string>
    <string name="click_me">Click Me!</string>
    <string name="custom_view">Custom View</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="list_dialog">Show List Dialog</string>
    <string name="form_dialog">Show Form Dialog</string>
    <string name="your_name">Your Name:</string>
    <string name="your_email">Your Email:</string>
    <string name="your_message">Your Message:</string>
    <string-array name="shopping_item">
        <item>Onion</item>
        <item>Sausage</item>
        <item>Milk</item>
        <item>Garlic</item>
        <item>Beef</item>
        <item>Veggies</item>
        <item>Olive</item>
        <item>Cheese</item>
        <item>Tuna</item>
        <item>Mushrooms</item>
    </string-array>
</resources>
