<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <android.support.design.button.MaterialButton
        android:id="@+id/grantMultiplePermissionBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/grant_multiple_permissions"
        android:textAllCaps="false" />

    <android.support.design.button.MaterialButton
        android:id="@+id/defaultNotificationBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/default_notification"
        android:textAllCaps="false" />

    <android.support.design.button.MaterialButton
        android:id="@+id/customNotificationBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/custom_notification"
        android:textAllCaps="false" />

    <android.support.design.button.MaterialButton
        android:id="@+id/customDrawableBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/custom_drawable"
        android:textAllCaps="false" />

    <android.support.design.button.MaterialButton
        android:id="@+id/customViewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/custom_view"
        android:textAllCaps="false" />

</LinearLayout>
